[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/Lobby_background2.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://scenes/Room.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/background.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/chop.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/hurt.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/PausePopup.tscn" type="PackedScene" id=7]

[node name="Room" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 683, 384 )
texture = ExtResource( 1 )

[node name="Phone" type="TextureButton" parent="."]
modulate = Color( 0, 1, 0.623529, 1 )
margin_left = 641.214
margin_top = 663.541
margin_right = 671.214
margin_bottom = 712.541
disabled = true
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhoneSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Computer" type="TextureButton" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 38.1122
margin_top = 428.235
margin_right = 143.112
margin_bottom = 501.235
disabled = true
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComputerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Advert" type="Sprite" parent="."]
modulate = Color( 0, 0.741176, 1, 1 )
position = Vector2( 971.017, 226.423 )
scale = Vector2( 6.10175, 3.59775 )
texture = ExtResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 837.551
margin_top = 171.775
margin_right = 1106.55
margin_bottom = 206.775
step = 1.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar2" type="ProgressBar" parent="."]
modulate = Color( 0.00784314, 1, 0, 1 )
margin_left = 835.663
margin_top = 243.51
margin_right = 1104.66
margin_bottom = 278.51
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="PausePopup" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="Phone" to="." method="_on_Phone_pressed"]
[connection signal="pressed" from="Computer" to="." method="_on_Computer_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
